saving projects with flexbox spacing. will resolve .c position issue on next commit

--- a/styles/Projects.module.css
+++ b/styles/Projects.module.css
@@ -1,32 +1,44 @@
 .container {
-	min-height: 100vh;
-	min-width: 100vw;
-	padding: 0 0.5rem;
+	max-width: 800px;
+	margin: 8rem auto;
+	padding: 0 1.6rem;
+}
+
+.projectTitle {
+	font-family: 'Inconsolata', monospace;
+}
+
+.cardContainer {
+	width: 100%;
+	height: auto;
 	display: flex;
-	flex-direction: column;
-	justify-content: center;
+	flex-flow: column;
+	justify-content: space-around;
 	align-items: center;
 }
 
-.cardDiv {
-	width: 100%;
-	height: 100%;
+/* .projectCard {
 	display: flex;
-	align-items: center;
-	justify-content: space-around;
-	flex-direction: row;
-	margin-right: 40rem;
-}
+} */
 
 .c {
-	position: absolute;
-	top: auto;
-	bottom: auto;
-	width: 40rem;
-	height: 20rem;
+	/* position: absolute; */
+	width: 50rem;
+	height: 25rem;
 	cursor: pointer;
 	will-change: transform, opacity;
 	border: 1px solid black;
 	/* background-size: cover;
 	background-image: url(https://images.unsplash.com/photo-1544511916-0148ccdeb877?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&w=1901&q=80i&auto=format&fit=crop); */
+}
+
+@media (max-width: 768px) {
+	.cardContainer {
+		margin-left: 0;
+	}
+
+	.c {
+		width: 25rem;
+		height: 15rem;
+	}
 }
